<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Navi60Activity!</string>
    <string name="app_name">성경암송60,180구절</string>
    <string name="app_name2">second</string>
    <string name="next">next next</string>
    <string name="A">A. 새로운 삶</string>
    <string name="B">B. 그리스도를 전파함</string>
    <string name="C">C. 하나님을 의뢰함</string>
    <string name="D">D. 그리스도 제자의 자격</string>
    <string name="E">E. 그리스도를 닮아 감</string>
    <string name="A1">중심되신 그리스도</string>
    <string name="A2">그리스도께 순종</string>
    <string name="A3">말씀</string>
    <string name="A4">기도</string>
    <string name="A5">교제</string>
    <string name="A6">증거</string>
    <string name="B1">모든 사람이 죄를 범함</string>
    <string name="B2">죄의 형벌</string>
    <string name="B3">그리스도가 형벌을 받음</string>
    <string name="B4">선행으로 구원받지 못함</string>
    <string name="B5">그리스도를 모셔야 함</string>
    <string name="B6">구원의 확신</string>
    <string name="C1">성령</string>
    <string name="C2">능력</string>
    <string name="C3">성실</string>
    <string name="C4">평안</string>
    <string name="C5">공급</string>
    <string name="C6">유혹에서 도우심</string>
    <string name="D1">그리스도를 첫자리에 모심</string>
    <string name="D2">죄에서 떠남</string>
    <string name="D3">견고함</string>
    <string name="D4">다른 사람을 섬김</string>
    <string name="D5">후히 드릴 것</string>
    <string name="D6">세게 비전</string>
    <string name="E1">사랑</string>
    <string name="E2">겸손</string>
    <string name="E3">순결</string>
    <string name="E4">정직</string>
    <string name="E5">믿음</string>
    <string name="E6">선행</string>
    <string name="b180_1">Ⅰ 하나님을 알아감</string>
    <string name="b180_2">Ⅱ 사랑안에서 자라감</string>
    <string name="b180_3">Ⅲ 믿음안에서 자라감</string>
    <string name="b180_4">Ⅳ 승리 안에서 행함</string>
    <string name="b180_5">Ⅴ그리스도를 증거함</string>
    <string name="b180_1_A">A. 예수그리스도</string>
    <string name="b180_1_B">B. 성령</string>
    <string name="b180_1_C">C. 하나님</string>
    <string name="b180_2_A">A. 사랑으로 말함</string>
    <string name="b180_2_B">B. 사랑으로 대함</string>
    <string name="b180_2_C">C. 사랑으로 행함</string>
    <string name="b180_3_A">A. 약속</string>
    <string name="b180_3_B">B. 말씀</string>
    <string name="b180_3_C">C. 믿음</string>
    <string name="b180_4_A">A. 승리</string>
    <string name="b180_4_B">B. 순결</string>
    <string name="b180_4_C">C. 기도</string>
    <string name="b180_5_A">A. 전도</string>
    <string name="b180_5_B">B. 변명</string>
    <string name="b180_5_C">C. 신자의 위치</string>
</resources>
